--- a/templates/backend/base/web/less/style.less
+++ b/templates/backend/base/web/less/style.less
@@ -11,6 +11,13 @@
   width: 55px;
 }
 
+.alert-success {
+  background-color: #b4eaee!important;
+  border-color: #b4eaee;
+  color: #28acb8!important;
+  border-radius: 0;
+}
+
 .table-advance {
   thead {
     tr {
