Add new module Multilingual

--- a/templates/backend/base/web/less/style.less
+++ b/templates/backend/base/web/less/style.less
@@ -1,11 +1,14 @@
 // Core variables and mixins
-@import "../../../../../vendor/bower/admin-lte/build/bootstrap-less/variables";
-@import "../../../../../vendor/bower/admin-lte/build/bootstrap-less/mixins";
-@import "../../../../../vendor/bower/admin-lte/build/less/variables";
-@import "../../../../../vendor/bower/admin-lte/build/less/mixins";
+@import "/vendor/bower/admin-lte/build/bootstrap-less/variables";
+@import "/vendor/bower/admin-lte/build/bootstrap-less/mixins";
+@import "/vendor/bower/admin-lte/build/less/variables";
+@import "/vendor/bower/admin-lte/build/less/mixins";
+
 // Components
 @import 'global/buttons';
 @import 'global/colors';
+@import 'global/fonts';
+@import 'global/margin';
 
 .w55 {
   width: 55px;
