--- a/application/templates/backend/base/web/less/style.less
+++ b/application/templates/backend/base/web/less/style.less
@@ -288,3 +288,17 @@ div.checker {
   top: 1em; /* (line-height/2) */
   bottom: 0;
 }
+
+.switch-fa {
+  color: #777;
+  font-size: 18px;
+
+  td & {
+    text-align: center;
+    width: 100%;
+  }
+
+  &--active {
+    color: #fd7b12;
+  }
+}
