--- a/application/templates/backend/base/web/less/style.less
+++ b/application/templates/backend/base/web/less/style.less
@@ -13,9 +13,9 @@ html {
   font-size: initial;
 }
 
-body {
+/*body {
   font-family: "Roboto", "Helvetica Neue", sans-serif !important;
-}
+}*/
 
 .w55 {
   width: 55px;
@@ -83,7 +83,7 @@ body {
     }
 
     &.default.is-active {
-      background-color: #4cd964;
+      background-color: #00c0ef;
     }
 
     .textNo {
@@ -254,6 +254,22 @@ div.checker {
 
 }
 
+.table-advance {
+
+  thead {
+
+    tr {
+
+      th {
+        background-color: #f1f4f7;
+        font-size: 14px;
+        font-weight: 400;
+        color: #3f444a;
+      }
+    }
+  }
+}
+
 .error-summary {
   color: #a94442;
   background: #fdf7f7;
@@ -261,50 +277,6 @@ div.checker {
   padding: 10px 20px;
   margin: 0 0 15px 0;
 }
-
-.oak-tree ul {
-  margin-left: .5em
-}
-
-/* (indentation/2) */
-.oak-tree ul:before {
-  content: "";
-  display: block;
-  width: 0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  border-left: 1px solid;
-}
-
-.oak-tree li {
-  margin: 0;
-  padding: 0 1.5em; /* indentation + .5em */
-  line-height: 2em; /* default list item's `line-height` */
-  font-weight: bold;
-  position: relative;
-}
-
-.oak-tree li:before {
-  content: "";
-  display: block;
-  width: 10px; /* same with indentation */
-  height: 0;
-  border-top: 1px solid;
-  margin-top: -1px; /* border top width */
-  position: absolute;
-  top: 1em; /* (line-height/2) */
-  left: 0;
-}
-
-.oak-tree li:last-child:before {
-  background: white; /* same with body background */
-  height: auto;
-  top: 1em; /* (line-height/2) */
-  bottom: 0;
-}
-
 .switch-fa {
   color: #777;
   font-size: 18px;
