--- a/application/templates/backend/base/web/less/global/fonts.less
+++ b/application/templates/backend/base/web/less/global/fonts.less
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("../../fonts/SourceSansProRegular/SourceSansProRegular.eot");
+  src: url("../../fonts/SourceSansProRegular/SourceSansProRegular.eot?#iefix")format("embedded-opentype"),
+        url("../../fonts/SourceSansProRegular/SourceSansProRegular.woff") format("woff"),
+        url("../../fonts/SourceSansProRegular/SourceSansProRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+
 @arFontSize: 10, 11, 12, 13, 14, 15, 16, 17 ,18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40;
 
 .font-size-generator(@index: 1) when (@index <= length(@arFontSize)) {
