--- a/application/templates/backend/base/web/less/style.less
+++ b/application/templates/backend/base/web/less/style.less
@@ -250,6 +250,11 @@ div.checker {
 
 }
 
+span[class^='ion-'] {
+  margin-right: 5px;
+  font-size: 14px;
+}
+
 .table-advance {
 
   thead {
@@ -261,6 +266,14 @@ div.checker {
         font-size: 14px;
         font-weight: 400;
         color: #3f444a;
+      }
+
+      td {
+
+        .form-control {
+          padding: 3px 12px;
+          height: 28px;
+        }
       }
     }
   }
