--- a/application/templates/backend/base/web/less/style.less
+++ b/application/templates/backend/base/web/less/style.less
@@ -16,6 +16,9 @@
 .w95 {
   width: 95px;
 }
+.w100 {
+  width: 100px;
+}
 
 .disabled {
   cursor: not-allowed;
@@ -323,7 +326,7 @@ span[class^='ion-'] {
 
 .table-mt tbody td, .table-mt tbody th {
   color: rgba(0, 0, 0, .87);
-  font-size: .8125rem;
+  font-size: 1.2rem;
   font-weight: 400;
   height: 3rem;
   padding-top: .91964rem;
@@ -332,7 +335,7 @@ span[class^='ion-'] {
 
 .table-mt tfoot td, .table-mt tfoot th {
   color: rgba(0, 0, 0, .54);
-  font-size: .75rem;
+  font-size: 1.2rem;
   font-weight: 400;
   height: 3.5rem;
   padding-top: 1.21429rem;
@@ -341,7 +344,7 @@ span[class^='ion-'] {
 
 .table-mt thead td, .table-mt thead th {
   color: rgba(0, 0, 0, .87);
-  font-size: .75rem;
+  font-size: 1.2rem;
   font-weight: 600;
   height: 3.5rem;
   padding-top: 1.21429rem;
