--- a/application/modules/cart/web/css/styles.css
+++ b/application/modules/cart/web/css/styles.css
@@ -32,3 +32,12 @@
     padding-bottom: 3px;
     border-bottom: 1px solid #ccc;
 }
+
+.oakcms-change-count input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+.oakcms-change-count input::-webkit-outer-spin-button,
+.oakcms-change-count input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
